# pixi_panda_ros2_platform

./: .env  .gitignore  .gitmodules  pixi.toml
launch/: franka_platform.launch.py
robot_launch/: CMakeLists.txt  package.xml
robot_launch/launch/: franka_full_launch.launch.py
robot_launch/launch/gripper/: crisp_py_gripper_adapter.py  gripper.launch.py
scripts/: launch_interface.py  set_hardware_env.sh
scripts/control(delete)/: gravity_compensation.yaml  joint_control.yaml
scripts/testfiles/: crisp_figure_eight.py
scripts/utils/: franka_desk.py  prompt.py  setup_logger.py  terminal_launcher.py  utils.py
src/camera/: dual_realsense.launch.py
src/franka_bringup/config/: controllers.yaml
src/franka_bringup/launch/: franka_new.launch.py  franka_platform.launch.py
src/franka_buttons/: setup.py
src/franka_buttons/franka_buttons/: franka_buttons_to_record.py  franka_pilot_buttons.py
src/franka_buttons/launch/: button_to_record_msg.launch.py
src/franka_description/robots/real/: dual_panda_arm.ros2_control.xacro  panda_arm.ros2_control.xacro
testfiles/: test_apply_force.py  test_arm_teleop.py  test_camera.py  test_dualarm_eight.py  test_gripper_teleop.py  test_leader_follower.py  test_teleop.py
